Add product endpoint
